(lang dune 3.20)

(name flynt)

(generate_opam_files true)

(source
 (github cactircool/flynt))

(authors "Author Name <c4ctircool@gmail.com>")

(maintainers "Maintainer Name <c4ctircool@gmail.com>")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name flynt)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
